Созданы основные классы, но поля заполнены не до конца

--- a/Coursework/Coursework/Coursework.csproj
+++ b/Coursework/Coursework/Coursework.csproj
@@ -45,15 +45,47 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\FormAdditionalFunc.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Forms\FormAdditionalFunc.Designer.cs">
+      <DependentUpon>FormAdditionalFunc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormDB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormDB.Designer.cs">
+      <DependentUpon>FormDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormForRecords.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormForRecords.Designer.cs">
+      <DependentUpon>FormForRecords.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Operations\DownloadPrice.cs" />
+    <Compile Include="Forms\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Operations\MakeReportIntoFile.cs" />
+    <Compile Include="Operations\MakerReportOnForm.cs" />
+    <Compile Include="Entity\manager.cs" />
+    <Compile Include="Entity\product.cs" />
+    <Compile Include="Operations\Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <Compile Include="Entity\provider.cs" />
+    <Compile Include="Entity\sale.cs" />
+    <Compile Include="Entity\storage.cs" />
+    <Compile Include="Entity\StorageProductBalance.cs" />
+    <Compile Include="Operations\TrackingStandart.cs" />
+    <Compile Include="Operations\WorkWithDatabase.cs" />
+    <Compile Include="Operations\WorkWithEmail.cs" />
+    <Compile Include="Operations\Redistribution.cs" />
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -78,6 +110,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
