--- a/Coursework/Coursework/Coursework.csproj
+++ b/Coursework/Coursework/Coursework.csproj
@@ -51,12 +51,6 @@
     <Compile Include="Forms\FormAdditionalFunc.Designer.cs">
       <DependentUpon>FormAdditionalFunc.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FormDB.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\FormDB.Designer.cs">
-      <DependentUpon>FormDB.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\FormForRecords.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,11 +58,11 @@
       <DependentUpon>FormForRecords.cs</DependentUpon>
     </Compile>
     <Compile Include="Operations\DownloadPrice.cs" />
-    <Compile Include="Forms\Form1.cs">
+    <Compile Include="Forms\FormMainDB.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\FormMainDB.Designer.cs">
+      <DependentUpon>FormMainDB.cs</DependentUpon>
     </Compile>
     <Compile Include="Operations\MakeReportIntoFile.cs" />
     <Compile Include="Operations\MakerReportOnForm.cs" />
@@ -85,8 +79,8 @@
     <Compile Include="Operations\WorkWithDatabase.cs" />
     <Compile Include="Operations\WorkWithEmail.cs" />
     <Compile Include="Operations\Redistribution.cs" />
-    <EmbeddedResource Include="Forms\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\FormMainDB.resx">
+      <DependentUpon>FormMainDB.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
