--- a/Coursework/Coursework/for_curs.csproj
+++ b/Coursework/Coursework/for_curs.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{24D8E798-E191-477D-A512-F785B7C76136}</ProjectGuid>
+    <ProjectGuid>{37C6F2CF-F14D-4725-BDE0-D4CABB0CE59C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Coursework</RootNamespace>
-    <AssemblyName>Coursework</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>for_curs</RootNamespace>
+    <AssemblyName>for_curs</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,14 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="itextsharp, Version=5.5.9.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\itextsharp.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft_Office_Interop_Excel, Version=11.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\Microsoft_Office_Interop_Excel.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>bin\Debug\Microsoft.Office.Interop.Excel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,61 +55,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\FormAdditionalFunc.cs">
+    <Compile Include="DataBase.cs" />
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FormAdditionalFunc.Designer.cs">
-      <DependentUpon>FormAdditionalFunc.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FormForRecords.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\FormForRecords.Designer.cs">
-      <DependentUpon>FormForRecords.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\Маша\Form12.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\Маша\Form12.Designer.cs" />
-    <Compile Include="Forms\Report.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\Report.Designer.cs">
-      <DependentUpon>Report.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Operations\OutputPrice.cs" />
-    <Compile Include="Forms\FormMainDB.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\FormMainDB.Designer.cs">
-      <DependentUpon>FormMainDB.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Operations\MakeReportIntoFile.cs" />
-    <Compile Include="Operations\MakerReportOnForm.cs" />
-    <Compile Include="Entity\manager.cs" />
-    <Compile Include="Entity\product.cs" />
-    <Compile Include="Operations\Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entity\provider.cs" />
-    <Compile Include="Entity\sale.cs" />
-    <Compile Include="Entity\storage.cs" />
-    <Compile Include="Entity\StorageProductBalance.cs" />
-    <Compile Include="Operations\TrackingStandart.cs" />
-    <Compile Include="Operations\WorkWithDatabase.cs" />
-    <Compile Include="Operations\WorkWithEmail.cs" />
-    <Compile Include="Operations\Redistribution.cs" />
-    <EmbeddedResource Include="Forms\FormAdditionalFunc.resx">
-      <DependentUpon>FormAdditionalFunc.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormForRecords.resx">
-      <DependentUpon>FormForRecords.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormMainDB.resx">
-      <DependentUpon>FormMainDB.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Report.resx">
-      <DependentUpon>Report.cs</DependentUpon>
+    <Compile Include="WorkWithDatabase.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -136,7 +90,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
